--- a/css/jquery.cslider.css
+++ b/css/jquery.cslider.css
@@ -1,3 +1,6 @@
+
+
+
 .da-slider {
     width: 100%;
     min-width: 320px;
@@ -26,7 +29,7 @@
     left:0;
     width:100%;
     height:100%;
-    background: #FECE1A;
+    background: #00CED1;
     opacity:0.85;
     filter: alpha(opacity=85);
 }
